[package]
name = "plygui-qt"
version = "0.0.1"
authors = ["Serhii Plyhun <snuk188@gmail.com>"]

[lib]
name = "plygui_qt"
path = "src/lib.rs"

[dependencies]
plygui-api = {version = "0.0.1", path = "../plygui-api"}
qt_core = {version = "~0.2"}
qt_gui = {version = "~0.2"}
qt_widgets = {version = "~0.2"}
qt_core_custom_events = {version = "*", path = "../qt_core_custom_events"}
lazy_static = {version = "~1.0"}

[features]
markup = ["plygui-api/markup"]