[package]
name = "plygui-qt"
version = "0.0.1"
authors = ["Serhii Plyhun <snuk188@gmail.com>"]

[lib]
name = "plygui_qt"
path = "src/lib.rs"

[dependencies]
plygui-api = {version = "0.0.1", path = "../plygui/src/api"}
qt_core = {version = "~0.2"}
qt_gui = {version = "~0.2"}
qt_widgets = {version = "~0.2"}
qt_core_custom_events = {version = "0.0.1"}
lazy_static = {version = "~1.0"}
libc = {version = "~0.2"}

[features]
markup = ["plygui-api/markup"]