[package]
name = "plygui-qt"
version = "0.0.1"
authors = ["Serhii Plyhun <snuk188@gmail.com>"]
edition = "2018"

[lib]
name = "plygui_qt"
path = "src/lib.rs"

[dependencies]
plygui-api = {version = "0.0.1", path = "../plygui/api"}
qt_core = {version = "0.5.0-alpha.2"}
qt_gui = {version = "0.5.0-alpha.2"}
qt_widgets = {version = "0.5.0-alpha.2"}
qt_core_custom_events = {version = "~0.2"}
lazy_static = {version = "~1.4"}
libc = {version = "~0.2"}

[features]
markup = ["plygui-api/markup"]
type_check = ["plygui-api/type_check"]
default = ["type_check"]